--- a/src/ui/Button/Button.scss
+++ b/src/ui/Button/Button.scss
@@ -19,8 +19,10 @@
     background-color: $color-primary-hover;
   }
 
-  &:active {
+  &:active,
+  &:focus {
     transform: translateY(2px);
+    background-color: $color-primary-hover;
   }
 
   &_disabled {
