--- a/src/ui/Accordion/Accordion.scss
+++ b/src/ui/Accordion/Accordion.scss
@@ -1,1 +1,55 @@
 @import "../../styles";
+
+.Accordion {
+  $this: &;
+  margin-top: 15px;
+  box-shadow: none;
+
+  &__header {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: max-content;
+    height: 34px;
+    padding: 10px 15px 10px 0;
+    background-color: $color-white;
+    transition: $transition;
+    cursor: pointer;
+
+    &:last-child {
+      margin-top: 0;
+    }
+
+    &:hover,
+    &:active,
+    &:focus {
+      transform: translateY(2px);
+    }
+
+    &-icon {
+      svg {
+        width: 15px;
+        height: 15px;
+        padding-left: 14px;
+        transition: $transition;
+      }
+    }
+  }
+
+  &__content {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    gap: 15px;
+    padding: 15px 0;
+  }
+
+  &#{$this}_active {
+    #{$this}__header-icon {
+      svg {
+        transform: rotate(180deg);
+        transform-origin: 75% 50%;
+      }
+    }
+  }
+}
