--- a/src/pages/SelectPage/SelectPage.scss
+++ b/src/pages/SelectPage/SelectPage.scss
@@ -3,7 +3,7 @@
   flex-direction: column;
   margin: 0 20px;
   gap: 20px;
-  &-Select {
+  &__Select {
     max-width: 300px;
     width: 100%;
 
@@ -25,7 +25,7 @@
 
 .theme-dark {
   .Sorting {
-    &-Select {
+    &__Select {
       svg {
         fill: #fff;
       }
