--- a/src/pages/ScrollbarPage/ScrollbarPage.scss
+++ b/src/pages/ScrollbarPage/ScrollbarPage.scss
@@ -1,5 +1,13 @@
-.ModalPage {
+.ScrollbarPage {
   display: flex;
   flex-direction: column;
   margin: 0 40px;
+
+  &__content {
+    padding: 15px;
+    width: 300px;
+    height: 300px;
+    border: 1px solid #ccc;
+    overflow: auto;
+  }
 }
