--- a/src/pages/DocumentViewerPage/DocumentViewerPage.scss
+++ b/src/pages/DocumentViewerPage/DocumentViewerPage.scss
@@ -2,4 +2,22 @@
   display: flex;
   flex-direction: column;
   margin: 0 40px;
+
+  iframe {
+    margin-bottom: 25px;
+  }
+
+  &-DocumentViewer {
+    margin-top: 25px;
+  }
+
+  &__modal {
+    max-width: 1200px;
+    height: 90vh;
+    overflow: hidden;
+
+    & .Modal {
+      height: 90vh;
+    }
+  }
 }
