--- a/src/pages/FormPage/FormPage.scss
+++ b/src/pages/FormPage/FormPage.scss
@@ -3,5 +3,43 @@
 .FormPage {
   display: flex;
   flex-direction: column;
+  justify-content: center;
   margin: 0 40px;
+  height: 100%;
+
+  &-Inner {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-grow: 1;
+    flex-direction: column;
+    max-width: 470px;
+    width: 100%;
+  }
+
+  &-Content {
+    padding: 24px;
+    width: 100%;
+    height: auto;
+    border-radius: 16px;
+  }
+
+  &-Title {
+    margin-bottom: 25px;
+    text-align: center;
+  }
+
+  &-FormFieldGroup {
+    position: relative;
+    margin-bottom: 50px;
+  }
+
+  &-Control {
+    display: flex;
+    justify-content: center;
+  }
+
+  &-Button {
+    margin-bottom: 20px;
+  }
 }
