--- a/src/pages/TabsPage/TabsPage.scss
+++ b/src/pages/TabsPage/TabsPage.scss
@@ -1,7 +1,7 @@
 .TabsPage {
-  h2 {
-    margin-bottom: 25px;
-  }
+  display: flex;
+  flex-direction: column;
+  margin: 0 40px;
 
   &-Content {
     margin-top: 25px;
