--- a/src/ui/Spinner/Spinner.scss
+++ b/src/ui/Spinner/Spinner.scss
@@ -1,7 +1,3 @@
 .Spinner {
-  content: "";
-  // position: absolute;
-  // top: 50%;
-  // transform: translateY(-50%);
-  // left: 50%;
+  align-self: flex-start;
 }
