--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -47,6 +47,18 @@ $box-shadow: 2px 2px 2px 0px rgba(0, 0, 0, 0.5);
 $background-gradient: linear-gradient(white, white) padding-box,
   linear-gradient(to bottom, hsl(39, 89%, 49%), hsl(40, 84%, 53%)) border-box;
 
+//shadow
+
+$shadow-black: 0 1px 2px rgba(0, 0, 0, 0.08), 0 4px 20px rgba(0, 0, 0, 0.08);
+$shadow-card: 0 5px 25px rgba(0.3, 0.31, 0.33, 0.12);
+$shadow-bottom: rgba(33, 35, 38, 0.1) 0px 10px 10px -10px;
+$shadow-form: 0 1px 20px rgba(4, 6, 28, 0.1);
+$shadow-sliderArrow: 0 0.1rem 2rem rgba(4, 6, 28, 0.1);
+$shadow-perimeter: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px,
+  rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
+$shadow-perimeter-light: rgba(138, 143, 160, 0.12) 0px 2px 4px 0px,
+  rgba(138, 143, 160, 0.32) 0px 2px 16px 0px;
+
 // new
 //light
 
