--- a/src/App.scss
+++ b/src/App.scss
@@ -14,7 +14,9 @@ a {
 }
 
 ul {
-  list-style-type: none;
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
 @media (prefers-reduced-motion: no-preference) {
