--- a/src/pages/CopyPage/CopyPage.scss
+++ b/src/pages/CopyPage/CopyPage.scss
@@ -1,30 +1,26 @@
 .CopyPage {
-  h2 {
-    margin-bottom: 25px;
-  }
+  display: flex;
+  flex-direction: column;
+  margin: 0 40px;
 
-  hr {
-    margin: 25px 0;
-  }
-
-  &-Details {
+  &__details {
     display: flex;
     align-items: center;
   }
 
-  &-Label {
+  &__label {
     margin-right: 8px;
     font-size: 16px;
     color: grey;
   }
 
-  &-Icon {
+  &__icon {
     margin-left: 8px;
     cursor: pointer;
 
-    &__active {
+    &_active {
       svg {
-        fill: limegreen;
+        stroke: limegreen;
       }
     }
   }
