--- a/src/pages/PortalPage/PortalPage.scss
+++ b/src/pages/PortalPage/PortalPage.scss
@@ -1,7 +1,7 @@
 .PortalPage {
-  h2 {
-    margin-bottom: 25px;
-  }
+  display: flex;
+  flex-direction: column;
+  margin: 0 40px;
 }
 
 .MyPortal {
