--- a/src/App.scss
+++ b/src/App.scss
@@ -19,6 +19,25 @@ ul {
   padding: 0;
 }
 
+button {
+  cursor: pointer;
+  outline: transparent;
+}
+
+.theme-dark {
+  background-color: rgba(24, 24, 31, 1);
+  color: #fff;
+}
+
+.theme-dark .text-dark {
+  color: #fff;
+}
+
+.theme-dark .icon-dark {
+  color: #fff;
+  fill: #fff;
+}
+
 @media (prefers-reduced-motion: no-preference) {
   .App-logo {
     animation: App-logo-spin infinite 20s linear;
