--- a/src/components/Layouts/MainLayout/MenuMain/Menu.scss
+++ b/src/components/Layouts/MainLayout/MenuMain/Menu.scss
@@ -5,11 +5,14 @@
   align-items: center;
   justify-content: center;
   background-color: $color-menu-bg-light;
-  color: $color-text-light;
+
   &-left {
     display: flex;
+    align-items: center;
+    justify-content: center;
     position: absolute;
     left: 20px;
+    gap: 20px;
   }
   &-list {
     display: flex;
