--- a/src/pages/AutocompletePage/AutocompletePage.scss
+++ b/src/pages/AutocompletePage/AutocompletePage.scss
@@ -1,4 +1,13 @@
 .AutocompletePage {
+  display: flex;
+  flex-direction: column;
+  margin: 0 40px;
+  gap: 20px;
+
+  &__value {
+    display: flex;
+  }
+
   &-Select {
     max-width: 220px;
     width: 100%;
