--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -22,6 +22,7 @@ $color-lighting: rgba(138, 143, 160, 1); /* #8a8fa0 */
 $color-grey: rgba(245, 245, 246, 1); /* #f5f5f6 */
 $color-dark-gray: rgba(185, 181, 181, 1); /* #B9B5B5 */
 $color-light-gray: rgba(228, 228, 228, 1); /* #e4e4e4 */
+$color-mercury-gray: rgba(232, 232, 232, 1); /* #e8e8e8 */
 $color-silver-gray: rgba(191, 191, 191, 1); /* #bfbfbf */
 $color-suit-gray: rgba(142, 142, 147, 1); /* #8e8e93 */
 $color-suit-gray-hover: rgba(134, 134, 134, 0.5); /* #bab9b9 */
