--- a/src/ui/Slider/Slider.scss
+++ b/src/ui/Slider/Slider.scss
@@ -1,4 +1,4 @@
-@import "../../../styles/index";
+@import "styles";
 
 /* ----- Резиновая главная картинка в слайдере ----- */
 .slick-slide img {
@@ -99,7 +99,7 @@
     border-radius: 50%;
     box-shadow: $shadow-sliderArrow;
     opacity: var(--slider-arrow-opacity);
-    transition: all $transition;
+    transition: $transition;
 
     &__left {
       left: 15px;
@@ -118,9 +118,10 @@
 
   &-ArrowCustom {
     svg {
+      display: flex;
       fill: $color-primary;
-      height: 16px;
-      width: 8px;
+      // height: 16px;
+      // width: 8px;
     }
   }
 }
