--- a/src/pages/AutocompletePage/AutocompletePage.scss
+++ b/src/pages/AutocompletePage/AutocompletePage.scss
@@ -1,7 +1,7 @@
 .AutocompletePage {
   display: flex;
   flex-direction: column;
-  margin: 0 40px;
+  margin: 20px 40px;
   gap: 20px;
 
   &__value {
