--- a/src/components/Layouts/MainLayout/MenuMain/Menu.scss
+++ b/src/components/Layouts/MainLayout/MenuMain/Menu.scss
@@ -1,9 +1,10 @@
-@import "../../../../styles/";
+@import "styles/";
 
 .menu {
   display: flex;
   align-items: center;
   justify-content: center;
+  min-height: 50px;
   background-color: $color-menu-bg-light;
 
   &-left {
@@ -13,6 +14,15 @@
     position: absolute;
     left: 20px;
     gap: 20px;
+
+    .logo {
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      cursor: pointer;
+      white-space: nowrap;
+      gap: 10px;
+    }
   }
   &-list {
     display: flex;
@@ -20,7 +30,7 @@
   }
 
   &-link {
-    padding: 8px 15px;
+    padding: 18px 20px;
     width: 100%;
     cursor: pointer;
     transition: all $transition;
