--- a/src/components/Layouts/UiLayout/MenuUi/MenuUi.scss
+++ b/src/components/Layouts/UiLayout/MenuUi/MenuUi.scss
@@ -1,9 +1,9 @@
-@import "../../../../styles/";
+@import "styles";
 
 .menuUi {
-  // display: none;
   width: 100%;
   height: 100%;
+  max-width: 260px;
   border-right: 1px solid rgb(228, 228, 228);
   overflow-y: auto;
   overflow-x: hidden;
