--- a/src/pages/UiPage/UiPage.scss
+++ b/src/pages/UiPage/UiPage.scss
@@ -1,11 +1,12 @@
 .uiPage {
   &-container {
     max-width: 1440px;
-    margin: 0 auto;
+    margin: 20px auto;
     overflow: hidden;
     position: relative;
     padding: 0 15px 100px 20px;
     display: grid;
     grid-template-columns: 300px minmax(0, 1fr);
+    gap: 20px;
   }
 }
