--- a/src/App.scss
+++ b/src/App.scss
@@ -18,6 +18,7 @@ body {
 
 .App {
   text-align: center;
+  color: #2d3748;
 }
 
 .App-logo {
@@ -29,6 +30,7 @@ a {
   display: inline-block;
   text-decoration: none;
   color: inherit;
+  font-size: 18px;
 }
 
 ul {
