--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,6 +1,6 @@
 $color-primary: #319795; /* ok */
 $color-primary-hover: #2c7a7b; /* ok */
-$color-primary-light: rgba(239, 234, 225, 1); /* #efeae1 */
+$color-primary-light: hsl(39, 89%, 49%); /* ok, check? */
 $color-primary-light-hover: rgba(223, 213, 195, 1); /* #dfd5c3 */
 
 $color-disabled: rgba(191, 191, 191, 1); /* #bfbfbf */
