--- a/src/ui/Switcher/Switcher.scss
+++ b/src/ui/Switcher/Switcher.scss
@@ -27,7 +27,7 @@
 
 .theme-dark {
   .Switcher {
-    background-color: $color-darkness;
+    background-color: $color-dark-switch;
 
     &-Pointer {
       background: linear-gradient(
