--- a/src/ui/Accordion/Accordion.scss
+++ b/src/ui/Accordion/Accordion.scss
@@ -12,7 +12,7 @@
     width: max-content;
     height: 34px;
     padding: 10px 15px 10px 0;
-    background-color: $color-white;
+    background-color: inherit;
     transition: $transition;
     cursor: pointer;
 
@@ -30,7 +30,7 @@
       svg {
         width: 15px;
         height: 15px;
-        padding-left: 14px;
+        padding: 2px 0 0 7px;
         transition: $transition;
       }
     }
