all styles and ui fixes

--- a/src/components/theme/ThemeSwitcher.scss
+++ b/src/components/theme/ThemeSwitcher.scss
@@ -39,11 +39,11 @@
 
     &__checked {
       svg {
-        fill: $color-primary-light;
+        fill: $color-icon;
       }
 
       path {
-        fill: $color-primary-light;
+        fill: $color-icon;
       }
     }
   }
