--- a/src/ui/Modal/Modal.scss
+++ b/src/ui/Modal/Modal.scss
@@ -55,7 +55,7 @@
     }
 
     &Default {
-      background: $color-darkness;
+      background-image: $background-gradient;
       box-shadow: $box-shadow;
     }
   }
