--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,107 +1,59 @@
+/*All*/
 $color-primary: #319795; /* ok */
 $color-primary-hover: #2c7a7b; /* ok */
+$color-primary-light: #d6e3e2; /* ok */
+$color-primary-light-hover: #c3d6d6; /* ok */
+$color-black: rgba(0, 0, 0, 1); /* ok */
 $color-white: rgba(255, 255, 255, 1); /* ok */
 $color-text-aqua: #319795; /* ok */
 
-//switch
+/*DropDawn*/
+$color-dark-background: #524090;
+$color-dark-background-hover: #2c7a7b;
+
+/*Switch*/
 $color-dark-switch: #086f83;
-
-//menu
-$color-text-active-light: #9bbdef; /* ok */
-
-//switcher icons
-$color-primary-light: hsl(39, 89%, 49%); /* ok, check? */
-$color-dark-gray: rgba(185, 181, 181, 1); /* ok */
-
-$background-gradient: linear-gradient(
+$color-icon: hsl(50, 80%, 55%); /* ok, check? */
+$color-dark-gray: rgb(123, 120, 120); /* ok */
+$color-nightSky: rgba(35, 40, 56, 1);
+$background-gradient: linear-gradient(to right, #66b1c0, #8161c5); /* ok */
+$background-light-gradient: linear-gradient(
   to right,
-  #0987a0,
-  #805ad5
-); /* ok, check? */
+  #71bec8,
+  #9589c2
+); /* ok */
 
+/*Menu*/
+$color-text-active-light: #aaaaaa; /* ok */
 $transition: all 0.3s; /* ok */
 $border-radius: 4px; /* ok */
-$box-shadow: 2px 2px 2px 0px rgba(0, 0, 0, 0.5); /* ok */
 
-$color-primary-light-hover: rgba(223, 213, 195, 1);
+/* Form */
+$color-disabled: rgba(191, 191, 191, 1); /* ok */
+$color-disabled-secondary: rgba(245, 245, 245, 1); /* ok */
+$color-text: rgba(51, 51, 51, 1); /* ok */
+/* Errors */
+$color-red: rgba(227, 18, 53, 1); /* ok */
+$color-light-red: rgba(251, 228, 227, 1); /* ok */
+$color-light-red-hover: rgba(250, 219, 218, 1); /* ok */
 
-$color-disabled: rgba(191, 191, 191, 1);
-$color-disabled-secondary: rgba(245, 245, 245, 1);
+/* Scroll */
+$color-grey: rgba(245, 245, 246, 1); /* ok */
+$color-light-gray: rgba(228, 228, 228, 1); /* ok */
+$color-mercury-gray: rgba(232, 232, 232, 1); /* ok */
+$color-silver-gray: rgba(191, 191, 191, 1); /* ok */
+$color-suit-gray: rgb(153, 153, 153); /* ok */
+$color-suit-gray-hover: rgba(134, 134, 134, 0.5); /* ok */
+$color-alto-gray: rgba(87, 87, 87, 1); /* ok */
 
-$color-text: rgba(51, 51, 51, 1);
-
-/* White */
-
-/* Dark */
-$color-black: rgba(0, 0, 0, 1);
-$color-night: rgba(24, 24, 31, 1);
-$color-darkness: rgba(31, 32, 41, 1);
-$color-nightSky: rgba(35, 40, 56, 1);
-$color-lighting: rgba(138, 143, 160, 1);
-
-/* Gray */
-$color-grey: rgba(245, 245, 246, 1);
-$color-dark-gray: rgba(185, 181, 181, 1);
-$color-light-gray: rgba(228, 228, 228, 1);
-$color-mercury-gray: rgba(232, 232, 232, 1);
-$color-silver-gray: rgba(191, 191, 191, 1);
-$color-suit-gray: rgba(142, 142, 147, 1);
-$color-suit-gray-hover: rgba(134, 134, 134, 0.5);
-$color-alto-gray: rgba(87, 87, 87, 1);
-
-/* Violet */
+/* Avatar */
 $color-light-violet: rgba(126, 87, 194, 1);
 $color-dark-violet: rgba(101, 45, 187, 1);
 
-/* Red */
-$color-red: rgba(227, 18, 53, 1);
-$color-light-red: rgba(251, 228, 227, 1);
-$color-light-red-hover: rgba(250, 219, 218, 1);
-
-/* Other */
-$color-bg-input: rgba(236, 241, 247, 1);
-$color-bg-input-hover: rgba(228, 235, 243, 1);
-
-$overlayOpacity: 0.6;
-
-//shadow
-
-$shadow-black: 0 1px 2px rgba(0, 0, 0, 0.08), 0 4px 20px rgba(0, 0, 0, 0.08);
-$shadow-card: 0 5px 25px rgba(0.3, 0.31, 0.33, 0.12);
-$shadow-bottom: rgba(33, 35, 38, 0.1) 0px 10px 10px -10px;
-$shadow-form: 0 1px 20px rgba(4, 6, 28, 0.1);
+/* Shadow */
+$box-shadow: 2px 2px 2px 0px rgba(0, 0, 0, 0.5); /* ok */
 $shadow-sliderArrow: 0 0.1rem 2rem rgba(4, 6, 28, 0.1);
 $shadow-perimeter: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px,
   rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
 $shadow-perimeter-light: rgba(138, 143, 160, 0.12) 0px 2px 4px 0px,
   rgba(138, 143, 160, 0.32) 0px 2px 16px 0px;
-
-// new
-//light
-
-$color-text-light: black;
-
-$color-border-light: blue;
-$color-border-bottom-light: blue;
-
-$color-bg-main-light: white;
-$color-menu-bg-light: #ffbc003d;
-
-//dark
-
-$color-text-active-dark: green;
-
-$color-border-dark: green;
-$color-border-bottom-dark: green;
-
-$color-bg-main-dark: #21092f;
-$color-menu-bg-dark: #370654;
-
-//special
-
-$color-text-special: red;
-
-//new my
-$color-text-cyan: #4fd1c5;
-
-$color-text-main: #2d3748;
