--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -25,6 +25,9 @@ $background-light-gradient: linear-gradient(
 
 /*Menu*/
 $color-text-active-light: #aaaaaa; /* ok */
+$color-link: #88bfce;
+$color-link-dark: #6182c5;
+$color-link-active-dark: #8161c5;
 $transition: all 0.3s; /* ok */
 $border-radius: 4px; /* ok */
 
