--- a/src/pages/FeaturesPage/FeaturesPage.scss
+++ b/src/pages/FeaturesPage/FeaturesPage.scss
@@ -4,7 +4,7 @@
     margin: 20px auto;
     overflow: hidden;
     position: relative;
-    padding: 0 15px 100px 20px;
+    padding: 0 15px 0 20px;
     display: grid;
     grid-template-columns: 300px minmax(0, 1fr);
     gap: 20px;
