left menu mobile design

--- a/src/components/Layouts/MainLayout/MenuMain/Menu.scss
+++ b/src/components/Layouts/MainLayout/MenuMain/Menu.scss
@@ -4,7 +4,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  min-height: 50px;
+  min-height: 54px;
+  max-height: 54px;
   color: $color-white;
   background-image: $background-gradient;
 
