--- a/src/components/Layouts/FeaturesLayout/MenuFeatures/MenuFeatures.scss
+++ b/src/components/Layouts/FeaturesLayout/MenuFeatures/MenuFeatures.scss
@@ -1,6 +1,7 @@
 @import "styles";
 
 .MenuFeatures {
+  display: flex;
   width: 100%;
   height: 100%;
   max-width: 260px;
@@ -48,6 +49,34 @@
       margin-top: 5px;
 
       background-color: black;
+    }
+  }
+}
+
+@include lg {
+  .MenuFeatures {
+    max-width: 200px;
+    &-link {
+      font-size: 16px;
+    }
+  }
+}
+
+@include md {
+  .MenuFeatures {
+    max-width: 110px;
+    margin-top: 18px;
+    &-link {
+      margin: 6px auto;
+      font-size: 14px;
+    }
+  }
+}
+
+@include sm {
+  .MenuFeatures {
+    &-link {
+      font-size: 13px;
     }
   }
 }
