--- a/src/pages/DocumentViewerPage/DocumentViewerPage.scss
+++ b/src/pages/DocumentViewerPage/DocumentViewerPage.scss
@@ -1,3 +1,5 @@
+@import "styles";
+
 .DocumentViewerPage {
   display: flex;
   flex-direction: column;
@@ -17,6 +19,14 @@
 
     & .Modal {
       height: 90vh;
+    }
+  }
+}
+
+@include sm {
+  .DocumentViewerPage {
+    button {
+      max-width: 210px;
     }
   }
 }
