--- a/src/pages/FormPage/FormPage.scss
+++ b/src/pages/FormPage/FormPage.scss
@@ -41,6 +41,8 @@
   .FormPage {
     &-Content {
       padding: 0;
+      border-radius: none;
+      box-shadow: none;
     }
     &-FormFieldGroup {
       margin-bottom: 10px;
