--- a/src/components/Layouts/FeaturesLayout/MenuFeatures/MenuFeatures.scss
+++ b/src/components/Layouts/FeaturesLayout/MenuFeatures/MenuFeatures.scss
@@ -16,6 +16,7 @@
     flex-direction: column;
     align-items: center;
     text-align: center;
+    margin: 0 auto;
   }
 
   &-link {
@@ -66,6 +67,9 @@
   .MenuFeatures {
     max-width: 110px;
     margin-top: 18px;
+    &-list {
+      margin: 0;
+    }
     &-link {
       margin: 6px auto;
       font-size: 14px;
@@ -75,6 +79,9 @@
 
 @include sm {
   .MenuFeatures {
+    &-list {
+      margin: 0;
+    }
     &-link {
       font-size: 13px;
     }
