--- a/src/pages/PortalPage/PortalPage.scss
+++ b/src/pages/PortalPage/PortalPage.scss
@@ -1,3 +1,5 @@
+@import "styles";
+
 .PortalPage {
   display: flex;
   flex-direction: column;
@@ -13,8 +15,23 @@
   right: 0;
   transform: translateY(-50%);
   margin: 0 auto;
-  padding: 40px;
+  padding: 20px;
   height: 230px;
-  width: 760px;
+  width: 30vw;
   box-shadow: 0 12px 15px 0 rgba(0, 0, 0, 0.25);
+}
+
+@include md {
+  .MyPortal {
+    width: 40vw;
+    right: 0;
+  }
+}
+
+@include sm {
+  .MyPortal {
+    width: 40vw;
+    height: 40vw;
+    left: 15vw;
+  }
 }
