--- a/src/pages/MainHooksPage/MainHooksPage.scss
+++ b/src/pages/MainHooksPage/MainHooksPage.scss
@@ -4,7 +4,7 @@
   justify-content: center;
   align-items: center;
   &__container {
-    width: 500px;
+    max-width: 500px;
     margin: 30px auto 0;
     .buttons {
       margin-top: 40px;
