--- a/src/ui/Typography/Typography.scss
+++ b/src/ui/Typography/Typography.scss
@@ -62,6 +62,10 @@ $base-font-family: "Roboto", sans-serif;
 
 @media (max-width: 768px) {
   .text {
+    &-extra-large {
+      font-size: 1.8rem;
+    }
+
     &-h1 {
       font-size: 22px;
     }
