--- a/src/pages/HomePage/HomePage.scss
+++ b/src/pages/HomePage/HomePage.scss
@@ -5,9 +5,9 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin: 30px 10px 0 10px;
   .title {
     max-width: 900px;
-    margin-top: 20px;
     .margin-bottom-0 {
       margin-bottom: 0;
     }
