--- a/src/pages/FormPage/FormPage.scss
+++ b/src/pages/FormPage/FormPage.scss
@@ -19,6 +19,7 @@
     height: auto;
     border-radius: 16px;
     box-shadow: 0 1px 20px rgba(4, 6, 28, 0.1);
+    padding: 5px;
   }
 
   &-Title {
