--- a/src/components/Layouts/FeaturesLayout/MenuFeatures/MenuFeatures.scss
+++ b/src/components/Layouts/FeaturesLayout/MenuFeatures/MenuFeatures.scss
@@ -1,15 +1,23 @@
 @import "styles";
 
 .MenuFeatures {
-  display: flex;
+  // width: 100%;
+  // height: 100%;
+  // max-width: 260px;
+  // border-right: 1px solid rgb(228, 228, 228);
+  // overflow-y: auto;
+  // overflow-x: hidden;
+  // z-index: 3;
+  // margin-top: 53px;
+
+  // position: fixed;
+  top: 0;
+  max-width: 240px;
   width: 100%;
   height: 100%;
-  max-width: 260px;
   border-right: 1px solid rgb(228, 228, 228);
   overflow-y: auto;
-  overflow-x: hidden;
   z-index: 3;
-  margin-top: 53px;
 
   &-list {
     display: flex;
