--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,11 +1,11 @@
 /*All*/
-$color-primary: #319795; /* ok */
-$color-primary-hover: #2c7a7b; /* ok */
-$color-primary-light: #d6e3e2; /* ok */
-$color-primary-light-hover: #c3d6d6; /* ok */
-$color-black: rgba(0, 0, 0, 1); /* ok */
-$color-white: rgba(255, 255, 255, 1); /* ok */
-$color-text-aqua: #319795; /* ok */
+$color-primary: #319795;
+$color-primary-hover: #2c7a7b;
+$color-primary-light: #d6e3e2;
+$color-primary-light-hover: #c3d6d6;
+$color-black: rgba(0, 0, 0, 1);
+$color-white: rgba(255, 255, 255, 1);
+$color-text-aqua: #319795;
 
 /*DropDawn*/
 $color-dark-background: #524090;
@@ -13,48 +13,44 @@ $color-dark-background-hover: #2c7a7b;
 
 /*Switch*/
 $color-dark-switch: #086f83;
-$color-icon: hsl(50, 80%, 55%); /* ok, check? */
-$color-dark-gray: rgb(123, 120, 120); /* ok */
+$color-icon: hsl(50, 80%, 55%);
+$color-dark-gray: rgb(123, 120, 120);
 $color-nightSky: rgba(35, 40, 56, 1);
-$background-gradient: linear-gradient(to right, #66b1c0, #8161c5); /* ok */
-$background-light-gradient: linear-gradient(
-  to right,
-  #71bec8,
-  #9589c2
-); /* ok */
+$background-gradient: linear-gradient(to right, #66b1c0, #8161c5);
+$background-light-gradient: linear-gradient(to right, #71bec8, #9589c2);
 
 /*Menu*/
-$color-text-active-light: #aaaaaa; /* ok */
+$color-text-active-light: #aaaaaa;
 $color-link: #88bfce;
 $color-link-dark: #6182c5;
 $color-link-active-dark: #8161c5;
-$transition: all 0.3s; /* ok */
-$border-radius: 4px; /* ok */
+$transition: all 0.3s;
+$border-radius: 4px;
 
 /* Form */
-$color-disabled: rgba(191, 191, 191, 1); /* ok */
-$color-disabled-secondary: rgba(245, 245, 245, 1); /* ok */
-$color-text: rgba(51, 51, 51, 1); /* ok */
+$color-disabled: rgba(191, 191, 191, 1);
+$color-disabled-secondary: rgba(245, 245, 245, 1);
+$color-text: rgba(51, 51, 51, 1);
 /* Errors */
-$color-red: rgba(227, 18, 53, 1); /* ok */
-$color-light-red: rgba(251, 228, 227, 1); /* ok */
-$color-light-red-hover: rgba(250, 219, 218, 1); /* ok */
+$color-red: rgba(227, 18, 53, 1);
+$color-light-red: rgba(251, 228, 227, 1);
+$color-light-red-hover: rgba(250, 219, 218, 1);
 
 /* Scroll */
-$color-grey: rgba(245, 245, 246, 1); /* ok */
-$color-light-gray: rgba(228, 228, 228, 1); /* ok */
-$color-mercury-gray: rgba(232, 232, 232, 1); /* ok */
-$color-silver-gray: rgba(191, 191, 191, 1); /* ok */
-$color-suit-gray: rgb(153, 153, 153); /* ok */
-$color-suit-gray-hover: rgba(134, 134, 134, 0.5); /* ok */
-$color-alto-gray: rgba(87, 87, 87, 1); /* ok */
+$color-grey: rgba(245, 245, 246, 1);
+$color-light-gray: rgba(228, 228, 228, 1);
+$color-mercury-gray: rgba(232, 232, 232, 1);
+$color-silver-gray: rgba(191, 191, 191, 1);
+$color-suit-gray: rgb(153, 153, 153);
+$color-suit-gray-hover: rgba(134, 134, 134, 0.5);
+$color-alto-gray: rgba(87, 87, 87, 1);
 
 /* Avatar */
 $color-light-violet: rgba(126, 87, 194, 1);
 $color-dark-violet: rgba(101, 45, 187, 1);
 
 /* Shadow */
-$box-shadow: 2px 2px 2px 0px rgba(0, 0, 0, 0.5); /* ok */
+$box-shadow: 2px 2px 2px 0px rgba(0, 0, 0, 0.5);
 $shadow-sliderArrow: 0 0.1rem 1rem rgba(4, 6, 28, 0.1);
 $shadow-perimeter: rgba(14, 30, 37, 0.12) 0px 2px 4px 0px,
   rgba(14, 30, 37, 0.32) 0px 2px 16px 0px;
